@@ -4,6 +4,7 @@ import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.ArgumentMatchers.isNotNull;
 import static org.mockito.ArgumentMatchers.isNull;
 import static org.mockito.ArgumentMatchers.notNull;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
@@ -15,7 +16,6 @@ import java.time.ZoneId;
 import java.time.temporal.ChronoUnit;
 import java.util.List;
 import java.util.function.BiFunction;
-import lombok.Setter;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -27,6 +27,8 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import uk.gov.hmcts.appregister.audit.event.BaseAuditEvent;
+import uk.gov.hmcts.appregister.audit.event.CompleteEvent;
 import uk.gov.hmcts.appregister.audit.listener.AuditOperationLifecycleListener;
 import uk.gov.hmcts.appregister.audit.listener.AuditOperationSlf4jLogger;
 import uk.gov.hmcts.appregister.audit.service.AuditOperationService;
@@ -36,8 +38,8 @@ import uk.gov.hmcts.appregister.common.entity.repository.StandardApplicantReposi
 import uk.gov.hmcts.appregister.common.mapper.ApplicantMapperImpl;
 import uk.gov.hmcts.appregister.common.mapper.PageMapper;
 import uk.gov.hmcts.appregister.common.model.PayloadForGet;
+import uk.gov.hmcts.appregister.common.projection.StandardApplicantEnrichedProjection;
 import uk.gov.hmcts.appregister.common.util.PagingWrapper;
-import uk.gov.hmcts.appregister.data.StandardApplicantTestData;
 import uk.gov.hmcts.appregister.generated.model.StandardApplicantGetDetailDto;
 import uk.gov.hmcts.appregister.generated.model.StandardApplicantPage;
 import uk.gov.hmcts.appregister.standardapplicant.audit.StandardApplicantOperation;
@@ -85,49 +87,87 @@ public class StandardApplicantServiceTest {
 
         String code = "APP001";
         String name = "John Doe";
+        String addressLine1 = "123 Main Street";
+        LocalDate from = LocalDate.now().minusDays(10);
+        LocalDate to = LocalDate.now().plusDays(10);
         Pageable pageable = PageRequest.of(0, 2);
 
-        StandardApplicantTestData standardApplicantTestData = new StandardApplicantTestData();
+        StandardApplicant standardApplicant1 = mock(StandardApplicant.class);
+        StandardApplicant standardApplicant2 = mock(StandardApplicant.class);
 
-        PageImpl<StandardApplicant> pageImpl =
-                new PageImpl<>(
-                        java.util.List.of(
-                                standardApplicantTestData.someComplete(),
-                                standardApplicantTestData.someComplete()),
-                        pageable,
-                        2);
+        when(standardApplicant1.getApplicantCode()).thenReturn("APP001");
+        when(standardApplicant1.getName()).thenReturn("John Doe");
+        when(standardApplicant1.getApplicantStartDate()).thenReturn(from);
+        when(standardApplicant1.getApplicantEndDate()).thenReturn(to);
 
-        when(repository.search(eq(code), eq(name), isNotNull(), eq(pageable))).thenReturn(pageImpl);
+        when(standardApplicant2.getApplicantCode()).thenReturn("APP002");
+        when(standardApplicant2.getName()).thenReturn("Jane Doe");
+        when(standardApplicant2.getApplicantStartDate()).thenReturn(from.plusDays(1));
+        when(standardApplicant2.getApplicantEndDate()).thenReturn(to.plusDays(1));
+
+        StandardApplicantEnrichedProjection projection1 =
+                mock(StandardApplicantEnrichedProjection.class);
+        StandardApplicantEnrichedProjection projection2 =
+                mock(StandardApplicantEnrichedProjection.class);
+
+        when(projection1.getStandardApplicant()).thenReturn(standardApplicant1);
+        when(projection1.getEffectiveName()).thenReturn("John Doe");
+
+        when(projection2.getStandardApplicant()).thenReturn(standardApplicant2);
+        when(projection2.getEffectiveName()).thenReturn("Jane Doe");
+
+        PageImpl<StandardApplicantEnrichedProjection> pageImpl =
+                new PageImpl<>(java.util.List.of(projection1, projection2), pageable, 2);
+
+        when(repository.search(
+                        eq(code),
+                        eq(name),
+                        eq(addressLine1),
+                        eq(from),
+                        eq(to),
+                        isNotNull(),
+                        eq(pageable)))
+                .thenReturn(pageImpl);
 
         PagingWrapper wrapper = PagingWrapper.of(List.of(), pageable);
 
         StandardApplicantPage standardApplicantPage =
-                standardApplicantService.findAll(code, name, wrapper);
+                standardApplicantService.findAll(code, name, addressLine1, from, to, wrapper);
+
+        verify(repository)
+                .search(
+                        eq(code),
+                        eq(name),
+                        eq(addressLine1),
+                        eq(from),
+                        eq(to),
+                        isNotNull(),
+                        eq(pageable));
 
         Assertions.assertEquals(2, standardApplicantPage.getTotalElements());
         Assertions.assertEquals(
-                pageImpl.getContent().get(0).getApplicantCode(),
-                standardApplicantPage.getContent().get(0).getCode());
+                pageImpl.getContent().getFirst().getStandardApplicant().getApplicantCode(),
+                standardApplicantPage.getContent().getFirst().getCode());
         Assertions.assertEquals(
-                pageImpl.getContent().get(0).getName(),
+                pageImpl.getContent().getFirst().getStandardApplicant().getName(),
                 standardApplicantPage
                         .getContent()
-                        .get(0)
+                        .getFirst()
                         .getApplicant()
                         .getOrganisation()
                         .getName());
         Assertions.assertEquals(
-                pageImpl.getContent().get(0).getApplicantStartDate(),
+                pageImpl.getContent().get(0).getStandardApplicant().getApplicantStartDate(),
                 standardApplicantPage.getContent().get(0).getStartDate());
         Assertions.assertEquals(
-                pageImpl.getContent().get(0).getApplicantEndDate(),
+                pageImpl.getContent().get(0).getStandardApplicant().getApplicantEndDate(),
                 standardApplicantPage.getContent().get(0).getEndDate().get());
 
         Assertions.assertEquals(
-                pageImpl.getContent().get(1).getApplicantCode(),
+                pageImpl.getContent().get(1).getStandardApplicant().getApplicantCode(),
                 standardApplicantPage.getContent().get(1).getCode());
         Assertions.assertEquals(
-                pageImpl.getContent().get(1).getName(),
+                pageImpl.getContent().get(1).getStandardApplicant().getName(),
                 standardApplicantPage
                         .getContent()
                         .get(1)
@@ -135,10 +175,10 @@ public class StandardApplicantServiceTest {
                         .getOrganisation()
                         .getName());
         Assertions.assertEquals(
-                pageImpl.getContent().get(1).getApplicantStartDate(),
+                pageImpl.getContent().get(1).getStandardApplicant().getApplicantStartDate(),
                 standardApplicantPage.getContent().get(1).getStartDate());
         Assertions.assertEquals(
-                pageImpl.getContent().get(1).getApplicantEndDate(),
+                pageImpl.getContent().get(1).getStandardApplicant().getApplicantEndDate(),
                 standardApplicantPage.getContent().get(1).getEndDate().get());
 
         verify(auditOperationService)
@@ -168,8 +208,57 @@ public class StandardApplicantServiceTest {
                         notNull());
     }
 
-    @Setter
+    @Test
+    void testGetByCode_auditsRequestedLookupCriteria() {
+        final String code = "APP001";
+        final LocalDate date = LocalDate.of(2025, 1, 1);
+        StandardApplicant standardApplicant = new StandardApplicant();
+        standardApplicant.setApplicantCode(code);
+        standardApplicant.setName("John Doe");
+        standardApplicant.setApplicantStartDate(LocalDate.of(2020, 1, 1));
+        validator.setSuccess(standardApplicant);
+
+        CapturingAuditListener listener = new CapturingAuditListener();
+        StandardApplicationServiceImpl localService =
+                new StandardApplicationServiceImpl(
+                        repository,
+                        standardApplicantMapper,
+                        clock,
+                        ukZone,
+                        pageMapper,
+                        validator,
+                        new AuditOperationServiceImpl(new ObjectMapper(), List.of(listener)),
+                        List.of(listener),
+                        new ApplicantMapperImpl());
+
+        StandardApplicantGetDetailDto actual = localService.findByCode(code, date);
+
+        Assertions.assertEquals(code, actual.getCode());
+        Assertions.assertNotNull(listener.getCompleteEvent());
+        StandardApplicant audited = (StandardApplicant) listener.getCompleteEvent().getNewValue();
+        Assertions.assertNotSame(standardApplicant, audited);
+        Assertions.assertEquals(code, audited.getApplicantCode());
+        Assertions.assertEquals(date, audited.getApplicantStartDate());
+    }
+
+    private static final class CapturingAuditListener implements AuditOperationLifecycleListener {
+        private CompleteEvent completeEvent;
+
+        @Override
+        public void eventPerformed(BaseAuditEvent event) {
+            if (event instanceof CompleteEvent complete) {
+                completeEvent = complete;
+            }
+        }
+
+        private CompleteEvent getCompleteEvent() {
+            return completeEvent;
+        }
+    }
+
     static class DummyStandardApplicantExistsValidator extends StandardApplicantExistsValidator {
+        private StandardApplicant success;
+
         public DummyStandardApplicantExistsValidator(StandardApplicantRepository repository) {
             super(repository);
         }
@@ -178,16 +267,21 @@ public class StandardApplicantServiceTest {
         public <R> R validate(
                 PayloadForGet saId,
                 BiFunction<PayloadForGet, StandardApplicant, R> createApplicationSupplier) {
-            return createApplicationSupplier.apply(saId, validateId());
+            return createApplicationSupplier.apply(
+                    saId, success != null ? success : defaultApplicant());
         }
 
-        private StandardApplicant validateId() {
+        private StandardApplicant defaultApplicant() {
             StandardApplicant standardApplicant = new StandardApplicant();
             standardApplicant.setApplicantCode("APP001");
             standardApplicant.setName("John Doe");
             standardApplicant.setApplicantStartDate(LocalDate.now());
             standardApplicant.setApplicantEndDate(LocalDate.now().plusDays(1));
             return standardApplicant;
+        }
+
+        void setSuccess(StandardApplicant success) {
+            this.success = success;
         }
     }
 }
